--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,19 @@
+---
+import '../styles/global.css' 
+import TopBar from '../components/TopBar.astro'; 
+---
 <!doctype html>
-<html lang="en">
+<html lang="en" class="bg-bg-primary text-text-primary">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>Blogs</title>
 	</head>
 	<body>
+		<TopBar/>
 		<slot />
 	</body>
 </html>
 
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
-</style>
