--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -39,6 +39,14 @@ h1, h2, h3, h4, h5, h6 {
   color: var(--color-text-primary);
 }
 
+h1 {
+  font-size: 2rem;
+  line-height: 1.2;
+}
+ h2 {
+  font-size: 1.6rem;
+  line-height: 1.2;
+ }
 html, body {
   font-family: "Nunito", sans-serif;
   background-color: var(--color-bg-primary);
