--- a/src/pages/editor.astro
+++ b/src/pages/editor.astro
@@ -3,7 +3,7 @@ import FloatingInput from "../components/FloatingInput.astro";
 import FloatingTextArea from "../components/FloatingTextArea.astro";
 import Layout from "../layouts/Layout.astro";
 import { Loader } from "@lucide/astro";
-import EditorTab from "../components/Editor.tsx";
+import EditorTab from "../components/Editor.jsx";
 ---
 
 <Layout>
