--- a/src/pages/editor.astro
+++ b/src/pages/editor.astro
@@ -7,7 +7,7 @@ import EditorTab from "../components/Editor.jsx";
 ---
 
 <Layout>
-  <div class="p-2 lg:max-w-screen-lg mx-auto overflow-x-hidden">
+  <div class="p-2 lg:max-w-screen-lg mx-auto overflow-hidden overflow-x-hidden">
     <h1 class="text-2xl md:text-4xl font-bold">Editor Page</h1>
     <p class="text-sm text-text-secondary">
       This is the editor page where you can create and edit content.
