--- a/src/components/FloatingInput.astro
+++ b/src/components/FloatingInput.astro
@@ -8,7 +8,7 @@ const { id, label, type = "text", value = "",  } = Astro.props;
     type={type}
     value={value}
     placeholder=""
-    class="peer block w-full border-b-2 border-text-primary focus:border-accent-primary bg-transparent pt-4 pb-1 px-0 text-lg text-text-primary outline-none"
+    class="peer block w-full border-b-2 border-text-primary focus:border-accent-primary bg-transparent px-2 pt-4 pb-1  text-lg text-text-primary outline-none"
   />
   <label
     for={id}
