--- a/src/pages/editor.astro
+++ b/src/pages/editor.astro
@@ -7,9 +7,9 @@ import EditorTab from "../components/Editor.jsx";
 ---
 
 <Layout>
-  <div class="p-2 lg:max-w-screen-lg mx-auto overflow-hidden overflow-x-hidden">
-    <h1 class="text-2xl md:text-4xl font-bold">Editor Page</h1>
-    <p class="text-sm text-text-secondary">
+  <div class="lg:max-w-screen-lg mx-auto overflow-hidden overflow-x-hidden">
+    <h1 class="text-2xl md:text-4xl font-bold p-2">Editor Page</h1>
+    <p class="text-sm text-text-secondary p-2">
       This is the editor page where you can create and edit content.
     </p>
     <FloatingInput id="title" label="Title" type="text" />
