--- a/src/components/FloatingInput.astro
+++ b/src/components/FloatingInput.astro
@@ -12,8 +12,8 @@ const { id, label, type = "text", value = "",  } = Astro.props;
   />
   <label
     for={id}
-    class="absolute left-0 top-2 text-text-primary text-lg transition-all
-           peer-placeholder-shown:top-5
+    class="absolute left-0 top-2 text-text-primary text-lg transition-all duration-200 ease-in-out
+           peer-placeholder-shown:top-5 
            peer-placeholder-shown:text-base
            peer-placeholder-shown:text-text-primary
            peer-focus:-top-3
