--- a/src/components/TopBar.astro
+++ b/src/components/TopBar.astro
@@ -23,7 +23,7 @@ const urls = [
 >
   <div class="flex items-center gap-2 text-2xl font-semibold text-text-primary">
     <img src="/logo.png" alt="logo" height="40" width="40" />
-    <h2>EchoPage</h2>
+    <h2>{import.meta.env.NAME}</h2>
   </div>
   <div class="flex gap-4">
     <div class="hidden md:flex items-center gap-4 text-text-primary">
