--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@
     <div class="flex flex-col items-center md:items-start gap-1">
       <div class="flex items-center gap-3">
         <img src="/logo.png" alt="EchoBlog Logo" class="w-10 h-10" />
-        <h3 class="text-2xl font-semibold">EchoPage</h3>
+        <h3 class="text-2xl font-semibold">{import.meta.env.NAME}</h3>
       </div>
       <p class="text-sm text-text-secondary italic">“Your daily dose of thoughtful insights”</p>
     </div>
@@ -16,11 +16,13 @@
       <li><a href="/privacy" class="hover:underline">Privacy Policy</a></li>
       <li><a href="/terms" class="hover:underline">Terms of Service</a></li>
     </ul>
-
-
+<div>
+   <a href="/login" class="text-center w-full flex justify-center items-center">Login and start writing...</a>
     <p class="text-sm text-center md:text-right text-text-secondary select-none">
-      © <span id="year"></span> EchoBlog. All rights reserved.
+   
+      © <span id="year"></span> {import.meta.env.NAME}. All rights reserved.
     </p>
+    </div>
   </div>
 </footer>
 
