--- a/src/pages/editor.astro
+++ b/src/pages/editor.astro
@@ -69,6 +69,7 @@ if (!url) {
     </div>
   </div>
   <script>
+import aiClient from "@/lib/aiClient";
 import autoSave from "@/lib/blogs/autosave";
 import { getSearchParam } from "@/lib/blogs/getParams";
 import { slugify } from "@/lib/blogs/slug";
