--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -86,7 +86,6 @@ font-weight: 700;
 .tiptap{
   background-color: var(--color-bg-primary);
   color: var(--color-text-primary);
-  border: 1px solid var(--color-text-muted);
   width: 100%;
 }
 
@@ -120,6 +119,7 @@ font-weight: 700;
   color: var(--color-text-secondary);
   font-weight: 800;
   text-decoration: underline;
+  cursor: pointer;
 }
 
 .ProseMirror a:hover{
