--- a/src/pages/editor.astro
+++ b/src/pages/editor.astro
@@ -41,9 +41,8 @@ if (!url) {
   content = data && data.length > 0 ? JSON.parse(data[0].content_json) : null;
 }
 ---
-
 <Layout>
-  <div class="lg:max-w-screen-lg mx-auto overflow-hidden overflow-x-hidden">
+  <div class="lg:max-w-screen-md mx-auto overflow-hidden overflow-x-hidden">
     <h1 class="text-2xl md:text-4xl font-bold p-2">Editor Page</h1>
     <p class="text-sm text-text-secondary p-2">
       This is the editor page where you can create and edit content.
