--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,7 @@ import "../styles/global.css";
 import TopBar from "../components/TopBar.astro";
 import Footer from "../components/Footer.astro";
 import Toasts from "@/components/Toasts";
+import Loading from "@/components/Loading";
 
 
 const cookies = Astro.cookies.get('theme')?.value ||  "light";
@@ -55,6 +56,7 @@ const {
     <TopBar />
     <div class="w-full h-12"></div>
     <Toasts client:load/>
+    <Loading client:load/>
     <slot />
     <Footer/>
   </body>
